update: added schools certifs and pp

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="resume/projects">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -65,7 +66,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">System engineer</h3>
                             <div class="subheading mb-3">Feel Mining</div>
-                            <!-- <p>TODO job descripton</p> -->
+                            <ul>
+                                <li>DevOps project management</li>
+                                <li>Deployment of monolithic applications and service-oriented applications on Kubernetes, cluster maintenance.</li>
+                                <li>Optimization of CI/CD flows and GitOps with ArgoCD.</li>
+                                <li>Close collaboration with development teams in a DevOps approach.</li>
+                                <li>Writing technical documentation and applying agile Kanban methodology.</li>
+                                <li>Implementation of ISMS procedures for the PASSI audit.</li>                            
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - Present</span></div>
                     </div>
@@ -73,8 +81,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
                             <div class="subheading mb-3">candi solar</div>
-                            <!-- <p>TODO job descripton</p> -->
-                        </div>
+                                <ul>
+                                    <li>Performed software maintenance and implemented new features using TypeScript and Python, ensuring code quality, scalability, and adherence to best practices.</li>
+                                    <li>DevOps infrastructure maintenance and deployment of new CI/CD pipelines for improved development workflow.</li>
+                                    <li>Monitoring and maintaining Candi's AWS services.</li>
+                                    <li>Assisting various business divisions in deploying new tools and services.</li>
+                                </ul>
+                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2024 - September 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -94,20 +107,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">CPE Lyon</h3>
+                            <div class="subheading mb-3">Master of engineering</div>
+                            <p>Master of engineering degree in Computer science and communication networks</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2022 - September 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Université Grenoble Alpes</h3>
+                            <div class="subheading mb-3">DUT Networking and telecommunication</div>
+                            <p>Two-year university degree in Networking and telecommunication</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2020 - July 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -157,21 +169,21 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <!-- TODO <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- Certifications-->
+            <section class="resume-section" id="Certifications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Cambridge English Certificate - Advanced (CAE), C1 Level
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Mobile Web Specialist - Google Certification
                         </li>
@@ -204,7 +216,7 @@
                             3
                             <sup>rd</sup>
                             Place - James Buchanan High School - Hackathon 2005
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
