fix: profile picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Alexis Carella</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="resume/projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="projects">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -68,11 +68,11 @@
                             <div class="subheading mb-3">Feel Mining</div>
                             <ul>
                                 <li>DevOps project management</li>
-                                <li>Deployment of monolithic applications and service-oriented applications on Kubernetes, cluster maintenance.</li>
+                                <li>Deployment of monolithic and service-oriented applications on Kubernetes, cluster maintenance.</li>
                                 <li>Optimization of CI/CD flows and GitOps with ArgoCD.</li>
                                 <li>Close collaboration with development teams in a DevOps approach.</li>
                                 <li>Writing technical documentation and applying agile Kanban methodology.</li>
-                                <li>Implementation of ISMS procedures for the PASSI audit.</li>                            
+                                <li>Implementation of ISMS procedures for the PASSI audit.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - Present</span></div>
