--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                             <h3 class="mb-0">CPE Lyon</h3>
                             <div class="subheading mb-3">Master of engineering</div>
                             <p>Master of engineering degree in Computer science and communication networks</p>
+                            <ul>
+                                <li>C, C++, Python, PHP and JAVA OOP programming</li>
+                                <li>System, application and networks security</li>
+                                <li>Web development (JS, PHP, Spring)</li>
+                                <li>Robotics and embedded programming: ROS2, CAN bus interraction in C</li>
+                                <li>DevOps: GitHub Actions, Ansible</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - September 2025</span></div>
                     </div>
@@ -118,6 +125,12 @@
                             <h3 class="mb-0">Université Grenoble Alpes</h3>
                             <div class="subheading mb-3">DUT Networking and telecommunication</div>
                             <p>Two-year university degree in Networking and telecommunication</p>
+                            <ul>
+                                <li>Linux and Windows Server System Administration </li>
+                                <li>Virtualization VMware ESXi, Docker and Swarm </li>
+                                <li>Connect and configure switches and routers (Cisco, HP) </li>
+                                <li>Enterprise Wifi configuration: EAPoL and Radius </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2020 - July 2022</span></div>
                     </div>
@@ -128,39 +141,28 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                    <div class="subheading mb-3">System engineering</div>
+                    <ul>
+                        <li>Linux</li>
+                        <li>Windows Server AD</li>
+                        <li>Virtualization</li>
+                        <li>Docker</li>
+                        <li>Kubernetes</li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+                    <div class="subheading mb-3">Software engineering</div>
+                    <ul>
+                        <li>Java, PHP</li>
+                        <li>C, C++</li>
+                        <li>Python</li>
+                        <li>SQL and NoSQL</li>
+                    </ul>
+                    <div class="subheading mb-3">DevOps</div>
+                    <ul>
+                        <li>ArgoCD</li>
+                        <li>Docker</li>
+                        <li>CI/CD</li>
+                        <li>Ansible</li>
+                        <li>Git</li>
                     </ul>
                 </div>
             </section>
